// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Typography/Link cancel w/ href 1`] = `
<a
  class="css-q2y3yl"
  href="http://example.com"
>
  Link
</a>
`;

exports[`Storyshots Components|Typography/Link cancel w/ onClick 1`] = `
<a
  class="css-q2y3yl"
  href="/"
>
  Try clicking with different mouse buttons and modifier keys (shift/ctrl/alt/cmd)
</a>
`;

exports[`Storyshots Components|Typography/Link no-cancel w/ href 1`] = `
<a
  class="css-q2y3yl"
  href="http://example.com"
>
  Link
</a>
`;

exports[`Storyshots Components|Typography/Link no-cancel w/ onClick 1`] = `
<a
  class="css-q2y3yl"
  href="/"
>
  any click will go through
</a>
`;
